<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_charclasses_0"
        android:title="@string/menu_charclasses_0" />

    <item android:id="@+id/menu_charclasses_1"
        android:title="@string/menu_charclasses_1" />

    <item android:id="@+id/menu_charclasses_2"
        android:title="@string/menu_charclasses_2" />

    <item android:id="@+id/menu_charclasses_3"
        android:title="@string/menu_charclasses_3" />

    <item android:id="@+id/menu_charclasses_4"
        android:title="@string/menu_charclasses_4" />

    <item android:id="@+id/menu_charclasses_5"
        android:title="@string/menu_charclasses_5" />

    <item android:id="@+id/menu_charclasses_6"
        android:title="@string/menu_charclasses_6" />

    <item android:id="@+id/menu_charclasses_7"
        android:title="@string/menu_charclasses_7" />

    <item android:id="@+id/menu_charclasses_8"
        android:title="@string/menu_charclasses_8" />

</menu>